# Sudoku-Solver

./: .gitignore  sudoku-solver.cabal
app/: Main.hs
app-gui/: Main.hs
src/Sudoku/: CLI.hs  GUI.hs  Logic.hs  Parser.hs  Pretty.hs  Solver.hs  Types.hs
test/: Spec.hs  easy.txt  hard.txt  invalid.txt  medium.txt
