cabal-version:       >=1.10
name:                sudoku-solver
version:             0.1.0.0
build-type:          Simple

executable sudoku-solver
  hs-source-dirs:    app, src
  main-is:           Main.hs

  other-modules:
      Sudoku.CLI
      Sudoku.Types
      Sudoku.Parser
      Sudoku.Pretty
      Sudoku.Logic
      Sudoku.Solver

  build-depends:
      base >= 4.14 && < 5

  ghc-options:       -Wall
  default-language:  Haskell2010
